Fix collapsed columns overlapping with table headers

--- a/www/index.css
+++ b/www/index.css
@@ -95,6 +95,8 @@ table th {
 	-moz-user-select: none;
 	-webkit-user-select: none;
 	-ms-user-select: none;
+	/* Avoid collapsed columns overlapping with table headers... for whatever reason*/
+	z-index: 1;
 }
 
 table th.pad {
